# AlasLatinasNeftify

./: .env.example  .gitignore  Cargo.toml  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_COMPLETE.md  DEPRECATION_FIX_SUMMARY.md  ESTADO_PROYECTO_DICIEMBRE.md  FREIGHTER_GUIDE.md  GUIA_COMPLETA.md  GUIA_VISUAL_VERCEL.md  IMPLEMENTATION_SUMMARY.md  INDICE_DOCUMENTACION.md  LOCAL_DEPLOYMENT.md  NETLIFY_READY.md  PROJECT_COMPLETION_SUMMARY.md  README.md  README_OLD.md  RESUMEN_FINAL.md  RESUMEN_FIX_DESTINOS.md  SESSION_SUMMARY.md  TESTNET_ISSUE.md  VERCEL_CONFIG_PASO_A_PASO.md  netlify.toml  package-lock.json  vercel.json
frontend/: .env  .env.example  .env.local  .gitignore  COMPLETE_INTEGRATION_SUMMARY.md  DOCUMENTATION_INDEX.md  FIX_DESTINOS_DICIEMBRE.md  FREIGHTER_FRONTEND_IMPLEMENTATION.md  FREIGHTER_INTEGRATION.md  FREIGHTER_QUICK_REFERENCE.md  FREIGHTER_TESTING_GUIDE.md  IMPLEMENTATION_SUMMARY.md  NETLIFY_DEPLOY_CHECKLIST.md  NETLIFY_READY.md  SERVER_NETLIFY_README.md  SERVER_README.md  VERCEL_DEPLOYMENT.md  VERCEL_SERVERLESS_GUIDE.md  VISUAL_INTEGRATION_GUIDE.md  index.html  index.js  netlify.toml  package.json  test-api.sh  test-payment.sh  vercel.json  vite.config.js
frontend/api/: auth.js  destinations.js  init-db.js  payments.js  reservations.js  store.js
frontend/server/: app.js  index.js  tests.js
frontend/src/: App.vue  main.js  router.js
public/: _redirects
scripts/: deploy_testnet.sh  invoke_testnet.sh
scripts/wasm_inspect/: Cargo.toml
src/: lib.rs  router.js
src/views/: Home.vue
test_snapshots/test/: test_add_comment.1.json  test_delete_user.1.json  (+16 more)
(+41 files in other folders)
